# jax-md

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .setup.py.~undo-tree~  .swp  .travis.yml  CONTRIBUTING.md  Cell_list_issue.ipynb  Minimization.ipynb  README.md  mkdocs.yml  nve_neighbor_list.ipynb  pyproject.toml  pytype.cfg  ruff.toml  sand_castle.ipynb  setup.cfg  setup.py  test.py  testcase.py
.github/: PULL_REQUEST_TEMPLATE.md  build.yml  release.yml
.github/workflows/: build.yml  docs.yml  pythonpublish.yml
awesome_jax-md/: jax_md_cookbook.ipynb  neural_network_demo.py  neural_networks.ipynb  neural_networks_with_brainunit.ipynb  nvt_simulation.ipynb  si_gnn.pickle
awesome_jax-md/__MACOSX/: ._Supplementary
docs/: conf.py  examples.rst  examples_units.rst  index.md  index.rst  jax_md.custom_partition.rst  jax_md.custom_smap.rst  jax_md.dataclasses.rst  jax_md.elasticity.rst  jax_md.energy.rst  jax_md.interpolate.rst  jax_md.io.rst  jax_md.minimize.rst  jax_md.nn.rst  jax_md.partition.rst  jax_md.quantity.rst  jax_md.reaxff.rst  jax_md.rigid_body.rst  jax_md.simulate.rst  jax_md.smap.rst  jax_md.space.rst  requirements.txt
docs/_static/: style.css
docs/_templates/: layout.html
docs/examples/: index.md
docs/javascript/: mathjax.js
docs/reference/: a2c.md  behler_parrinello.md  custom_partition.md  custom_smap.md  dataclasses.md  e3nn_layer.md  elasticity.md  electrostatics.md  energy.md  gnome.md  index.md  interpolate.md  minimize.md  mm_forcefields.md  nequip.md  nn.md  nn_util.md  partition.md  quantity.md  reaxff.md  rigid_body.md  simulate.md  smap.md  space.md  tpu.md  units.md  util.md
examples/: custom_nl.py  equivariant_neural_networks.py  fire_minimization.py  minimize.py  minimize_io.py  neural_networks.py  npt_simulation.py  nve_neighbor_list.py  nve_simulation.py  nvt_simulation.py  oplsaa_torsion.py  reaxff_nve_simulation.py  symmetric_md.py  uma_advanced_jax.py  uma_ase_recipes.py  uma_batch_screening.py  uma_differentiable_workflows.py  uma_example.py  uma_md_simulation.py  uma_multi_task.py  uma_phonons.py  uma_pretrained_ase.py  uma_pretrained_conversion.py  uma_pretrained_inference.py  uma_pretrained_md.py  uma_relaxation.py  units_nve_si_sw.py
examples-with-unit/: 1-Minimization.ipynb  2-Faster_Simulation.ipynb  3-Physical_Quantities.ipynb  4-Neural_Network_Potential.ipynb
examples/models/: si_equivariant.pickle  si_gnn.pickle
examples/units/: berendsen_si_sw.py  csvr_si_sw.py  npt_melting_si_sw.py  npt_si_sw.py  nve_si_sw.py  nvk_si_sw.py  nvt_si_sw.py  velocity_rescale_si_sw.py
jax_md/: .#energy.py  .#simulate.py  .dataclasses.py.~undo-tree~  .energy.py.swp  .partition.py.swp  .quantity.py.swp  .quantity.py.~undo-tree~  .rigid_body.py.~undo-tree~  .simulate.py.~undo-tree~  .smap.py.swp  .space.py.~undo-tree~  __init__.py  cell_list.py  custom_partition.py  custom_smap.py  dataclasses.py  elasticity.py  energy.py  geometry.py  interpolate.py  io.py  minimize.py  mm.py  mm_utils.py  nn.py  partition.py  quantity.py  reaxff_energy.py  reaxff_forcefield.py  reaxff_helper.py  reaxff_interactions.py  rigid_body.py  simulate.py  smap.py  space.py  test_util.py  time_dependence.py  tpu.py  typing.py  units.py  (+1 more)
jax_md/_energy/: __init__.py  electrostatics.py
jax_md/_nn/: .#nequip.py  __init__.py  allegro.py  behler_parrinello.py  e3nn_layer.py  gnome.py  mace.py  nequip.py  util.py
jax_md/_reaxff/: reaxff_energy.py  reaxff_interactions.py
jax_md/a2c/: __init__.py  a2c_workflow.py  crystallizer_utils.py  make_amorphous_utils.py
jax_md/amber/: __init__.py  amber.py  amber_energy.py  amber_energy_v2.py  amber_fe.py  amber_forcefield.py  amber_helper.py  amber_interactions.py  amber_restraints.py  pme_example.py  test_amber.py  test_optimizer.out  test_optimizer.py  test_pme_nrg.py
jax_md/colab_tools/: .#renderer.py  __init__.py  renderer.py  visualization.html
jax_md/ff/: __init__.py
jax_md/io/: __init__.py  io.py
jax_md/mm_forcefields/: README.md  base.py  neighbor.py
jax_md/oplsaa_ff/: energy_oplsaa.py  modular_Ewald.py
jax_md/potentials/: amber.py  da.prmtop
jax_md/reaxff/: __init__.py  reaxff_energy.py  reaxff_forcefield.py  reaxff_helper.py  reaxff_interactions.py
notebooks/: Athermal_Linear_Elasticity.ipynb  TPU_MD.ipynb  athermal_linear_elasticity.ipynb  cargese_swap_mc.ipynb  chapter_3_neural_networks.ipynb  customizing_potentials_cookbook.ipynb  equivariant_neural_networks.ipynb  flocking.ipynb  implicit_differentiation.ipynb  jax_md_cookbook.ipynb  jax_md_cookbook.ipynb   jax_mdmm_link.py  lanl_summer_school_demo.ipynb  lanl_summer_school_demoi.ipynb  lj_benchmark.ipynb  meta_optimization.ipynb  minimization.ipynb  neural_networks.ipynb  neurips_spotlight_demo.ipynb  npt_simulation.ipynb  nve_neighbor_list.ipynb  nve_simulation.ipynb  nvt_simulation.ipynb  oplssa_torsion.ipynb  reaxff_nve_simulation.ipynb  sand_castle.ipynb  symd.ipynb  talk_demo.ipynb
notebooks/data/: reaxff_target.txt
notebooks/tutorial/: Chapter_1_Introduction.ipynb  Chapter_1_Introduction.py  Chapter_1_Introduction_1.py  Chapter_1_Introduction_2.py  Chapter_1_Introduction_3.py  Chapter_2_Physical_Quantities.ipynb  Chapter_3_Neural_Network_Potentials.ipynb  Chapter_4_Customizable_Simulations.ipynb  Chapter_5_Meta_Optimization.ipynb
notebooks/units_examples/: Example_1_NVE_Si_SW.ipynb  (+7 more)
tests/: .#smap_test.py  .#space_test.py  .energy_test.py.swp  .simulate_test.py.~undo-tree~  .smap_test.py.swp  a2c_test.py  amber_fe_test.py  amber_perf_test.py  amber_test.py  custom_partition_test.py  custom_smap_test.py  elasticity_test.py  energy_test.py  generate_pt_reference.py  generate_pt_reference_multi.py  mace_jaxmd_bridge_test.py  mace_test.py  minimize_test.py  mm_test.py  nequip_test.py  nn_test.py  oplsaa_test.py  partition_test.py  quantity_test.py  reaxff_test.py  rigid_body_test.py  run_all_tests.sh  simulate_test.py  smap_test.py  space_test.py  test_structures.py  test_uma_comparison.py  tpu_test.py  uma_100_structures_test.py  uma_e2e_test.py  uma_pretrained_test.py  uma_relaxation_test.py  uma_test.py
(+489 files in other folders)
